Fix header style overflow issue when too tall

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -105,6 +105,7 @@
 			height: 100%;
 			position: fixed;
 			padding: $size__default-padding;
+			overflow-y: auto;
 
 			.header-inner {
 				max-width: 100%;
